[metadata]
name = deutschlandfunk
version = 0.0.0
description = Python API for Deutschlandfunk audios (implemented by scraping the website)
author = TheFGFSEagle
author_email = thefgfseagle@gmail.com
long_description_content_type = text/markdown
long_description = file: README.md
keywords = deutschlandfunk scraper
license = GPLv3
classifiers =
	Programming Language :: Python :: 3
url = https://github.com/TheFGFSEagle/deutschlandfunk-api

project_urls = 
	Homepage = https://github.com/TheFGFSEagle/deutschlandfunk-api
	Bug Tracker = https://github.com/TheFGFSEagle/deutschlandfunk-api/issues

[options]
packages = find:
install_requires =
	plum-dispatch<=1.7.4
	tqdm
	requests
	appdirs
	bs4
	Pillow
	python-dateutil
	natsort
include_package_data = True

test_suite = tests

[options.entry_points]
console_scripts = 

[options.package_data]
* = 
